syntax = "proto3";

package api;
option go_package = "./cipher";

service Cipher {
  rpc Encrypt (EncryptRequest) returns (EncryptResponse) {}
  rpc Decrypt (DecryptRequest) returns (DecryptResponse) {}
}

message EncryptRequest {
  string input = 1;
  int32 shift = 2;
}

message DecryptRequest {
  string input = 1;
  int32 shift = 2;
}

message DecryptResponse {
  string result = 1;
}

message EncryptResponse {
  string result = 1;
}